--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -14,6 +14,7 @@ ul {
     margin-bottom: 1em;
     display: flex;
     flex-direction: column;
+    font-size: medium;
 
     p {
       margin: 0;
